# traits

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/traits/: functions.hpp
test/: CMakeLists.txt  main.cpp  readme_example.hpp  test_function_traits.hpp
